[package]
name = "whois-rdap"
version = "0.3.0"
edition = "2024"

[dependencies]
anyhow = "1.0"

# default-features = false drops: color (anstream/anstyle), auto-update, wrap-help
clap = { version = "4.6", default-features = false, features = [
    "std",
    "help",
    "usage",
    "error-context",
    "suggestions",
    "derive",
] }

# default-features = false drops: charset (encoding_rs), http2 (h2), cookies,
# multipart, brotli, deflate, gzip, macos-system-certificate-store, socks
# RDAP returns small UTF-8 JSON over HTTPS – none of those are needed.
#
# rustls-no-provider: lets us pick ring instead of the default aws-lc-rs/aws-lc-sys
# (aws-lc-sys is a ~1.2MiB C library; ring is ~200KB pure Rust).
reqwest = { version = "0.13", default-features = false, features = [
    "json",
    "rustls-no-provider",
] }

# ring: lightweight Rust TLS crypto backend, replaces aws-lc-rs.
# tls12: keep TLS 1.2 support — some RDAP servers are still on it.
rustls = { version = "0.23", default-features = false, features = ["ring", "tls12", "std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# tokio: rt-multi-thread for spawn_blocking (cache writes) + bulk concurrency.
# fs + io-std for async file/stdin reading in bulk mode.
tokio = { version = "1.52", default-features = false, features = [
    "rt",
    "rt-multi-thread",  # needed for spawn_blocking + bulk parallelism
    "macros",
    "fs",               # async file I/O for --file input
    "io-std",           # async stdin reading
    "io-util",          # AsyncBufReadExt
    "sync",             # Mutex for cache connection
] }

# Feature 2 — IANA bootstrap triage
# Ipv4Net / Ipv6Net prefix types + Contains trait for longest-prefix-match.
ipnet = "2"

# Feature 4 — SQLite result cache
# bundled = compile SQLite from source; no system libsqlite3 dependency.
rusqlite = { version = "0.32", features = ["bundled"] }

# Feature 1 — parallel bulk streaming via buffer_unordered
futures = { version = "0.3", default-features = false, features = ["std"] }

[profile.release]
lto = true
strip = true
opt-level = "z"
panic = "abort"
codegen-units = 1      # allows better cross-crate inlining / dead-code elim

# Compile all dependencies with size optimization to shrink binary footprint
[profile.release.package."*"]
opt-level = "z"        # optimize for size (network latency dominates anyway)
